# cm

./: CMakeLists.txt
cmake/: utils.cmake
include/: types.h
include/glad/: glad.h
include/math/: mat.h  vec.h
include/mpool/: mpool.h
include/render/: boundingsphere.h  camera.h  rendercallback.h  scene.h  scene_info.h  shader.h  texture.h
src/: CMakeLists.txt
src/glad/: CMakeLists.txt  glad.c
src/math/: CMakeLists.txt  mat.c  vec.c
src/mpool/: CMakeLists.txt  mpool.c
src/render/: CMakeLists.txt  shader.c  texture.c
test/: CMakeLists.txt  main.c
